[metadata]
license_file = License
[build_manpages]
manpages =
    # solution 1: --split up the commandline_arguments parser --better
    #man/git-fleximod.1:function:commandline_arguments:pyfile=src/git-fleximod
    # solution 2 -- make parser global
    man/git-fleximod.2:pyfile=src/git-fleximod:object=parser
